k8s/course-k8s-innovacion/templates/ingress/client-gateway.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: courses-api-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: course-api
                port:
                  number: 80
